--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,18 @@ dependencies:
   flutter_spinkit: ^5.2.0
   firebase_core: ^2.14.0
   firebase_auth: ^4.6.3
+  provider: ^6.0.5
+  path_provider: ^2.0.14
+  permission_handler: ^10.2.0
+  image_gallery_saver: ^2.0.3
+  video_player: ^2.6.0
+  chewie: ^1.4.0
+  share_plus: ^6.3.1
+  flutter_native_api: ^0.0.1
+  video_thumbnail: ^0.5.3
+  file_manager: ^1.0.1
+  file_picker: ^5.2.7
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +39,13 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
+  plugin:
+    platforms:
+      android:
+        package: plugins.justsoft.xyz/video_thumbnail
+        pluginClass: VideoThumbnailPlugin
+      ios:
+        pluginClass: VideoThumbnailPlugin
 
   uses-material-design: true
 
